# rundeck-yc-scheduler

./: .ansible-lint  .env.example  .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  .tool-versions  Dockerfile  Makefile  README.md  cliff.toml  pyproject.toml  renovate.json  requirements.txt
.github/actions/e2e-setup/: action.yml
.github/workflows/: build.yml  e2e-all.yml  e2e-application-load-balancer.yml  e2e-compute-instance.yml  e2e-managed-clickhouse.yml  e2e-managed-kafka.yml  e2e-managed-kubernetes.yml  e2e-managed-mysql.yml  e2e-managed-postgresql.yml  e2e-managed-redis.yml  e2e-network-load-balancer.yml  e2e.yml  lint.yml  release.yml  test.yml
examples/configuration/manual-rundeck/: README.md
examples/configuration/manual-rundeck/acl/: project-storage.aclpolicy
examples/configuration/manual-rundeck/jobs/: start-RESOURCE_TYPE.yaml.tpl  start-all.yaml  stop-RESOURCE_TYPE.yaml.tpl  stop-all.yaml
examples/configuration/terraform-rundeck-yc-scheduler/: README.md  main.tf  providers.tf  variables.tf
examples/configuration/terraform-rundeck-yc-scheduler/examples/: main.tf  terraform.tfvars.example  variables.tf
examples/deployment/ansible/: README.md
examples/deployment/ansible/rundeck_yc_scheduler/defaults/: main.yml
examples/deployment/ansible/rundeck_yc_scheduler/handlers/: main.yml
examples/deployment/docker/: README.md
plugin/: plugin.yaml
plugin/contents/: node_source.py  start.py  stop.py  yc_common.py
tests/: conftest.py  test_node_source.py  test_start.py  test_stop.py  test_yc_common.py
tests/e2e/: rundeck.py  yc.sh
(+4 files in other folders)
