[project]
name = "rundeck-yc-scheduler"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["plugin/contents", "tests"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort
ignore = ["E501"]          # line length — handled by ruff format

[tool.bandit]
targets = ["plugin/contents"]
skips = ["B105"]  # false positive: pagination token "" is not a password
